Dev remade database (#27)
* Updated client version

* Remade models

* Remade repositories

* Remade EntityToResponseMapper

* Remade Responses

* Remade Services

* Remade Controllers

* Added id to the response

* Remade UserResponse

* Remade User entity

* Remade UserRepository

* Remade FriendService

* Removed unused method

* Adjusted TestUtils

* Adjusted MapperTest

* Adjusted DeckRepositoryTest

* Adjusted FriendInvitationRepositoryTest

* Adjusted GameSessionRepositoryTest

* Adjusted QuestionRepositoryTest

* Adjusted UserRepositoryTest

* Adjusted made createUser method return unique user

* Adjusted DeckServiceTest

* Adjusted FriendServiceTest

* Adjusted NotificationSchedulerTest

* Adjusted QuestionServiceTest

* Adjusted UserServiceTest

* Adjusted GameSessionServiceTest

* Adjusted DeckControllerTest

* Adjusted FriendControllerTest

* Adjusted GameSessionControllerTest

* Adjusted QuestionControllerTest

* Fixed linter issue